# agea

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .mcp.json  .style.yapf  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  kryga.project  start_dev.bat  start_dev.py
editor/vscode/native/: CMakeLists.txt  package.json
engine/: CMakeLists.txt  agea_minimal.h  fs_locator.cpp  fs_locator.h  main.cpp  native_window.cpp  native_window.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h
engine/app/: main.cpp
engine/core/: fs_locator.cpp  id.cpp  native_window.cpp  rendering queues.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_initializers.cpp
engine/editor/cli/: cli.cpp
engine/include/core/: agea_minimal.h  fs_locator.h  id.h  native_window.h  rendering queues.h  vk_engine.h
engine/include/engine/: agea_engine.h  engine_counters.h  property_drawers.h  ui.h
engine/include/model/: conteiner_loader.h  game_object.h  level.h  level_constructor.h  mesh_object.h  model_fwds.h  object_construction_context.h  object_constructor.h  objects_loader.h  package.h  package_manager.h  smart_object.h
engine/include/reflection/: object_reflection.h  property.h  property_utils.h  types.h
engine/include/serialization/: json_serialization.h  serialization.h  serialization_utils.h
engine/include/ui/: console.h  property_drawers.h  ui.h
engine/include/utils/: agea_log.h  check.h  defines_utils.h  file_utils.h  path.h  process.h  weird_singletone.h
engine/include/vulkan_render/: render_loader.h  vulkan_material_data.h  vulkan_mesh_data.h  vulkan_render_data.h  vulkan_shader_data.h  vulkan_shader_effect.h  vulkan_types.h
engine/model/: conteiner_loader.cpp  game_object.cpp  level.cpp  level.h  level_constructor.cpp  level_constructor.h  level_object.cpp  level_object.h  mesh_object.cpp  mesh_object.h  object_construction_context.cpp  object_constructor.cpp  object_constructor.h  object_prototypes_registry.cpp  object_prototypes_registry.h  objects_loader.cpp  package.cpp  package_manager.cpp  player.h  smart_object.cpp  smart_object.h
engine/model/caches/: cache_set.cpp  class_object_cache.cpp  empty_objects_cache.cpp  materials_cache.cpp  meshes_cache.cpp  objects_cache.cpp  textures_cache.cpp
engine/model/components/: camera_component.cpp  camera_component.h  component.cpp  component.h  empty_level_object_component.cpp  empty_level_object_component.h  game_object_component.cpp  level_object_component.cpp  level_object_component.h  (+2 more)
engine/reflection/: object_reflection.cpp  property.cpp  property.h  types.cpp  types.h
engine/serialization/: json_serialization.h  serialization.cpp
engine/src/: agea_engine.cpp  editor.cpp  input_manager.cpp  main.cpp  property_drawers.cpp  sync_service.cpp  ui.cpp
engine/ui/: console.cpp  property_drawers.cpp  ui.cpp  ui.h
engine/utils/: agea_log.cpp  check.h  defines_utils.h  file_utils.cpp  file_utils.h  path.cpp  process.cpp  process.h  string_utility.cpp  string_utility.h  weird_singletone.h
engine/vulkan_render/: render_device.cpp  render_device.h  render_loader.cpp  render_loader.h  vulkan_material_data.h  vulkan_material_datal.cpp  vulkan_mesh_data.cpp  vulkan_mesh_data.h  vulkan_render_data.cpp  vulkan_render_data.h  vulkan_render_fwds.h  vulkan_shader_data.cpp  vulkan_shader_data.h  vulkan_shader_effect.cpp  vulkan_shader_effect.h  vulkan_texture_data.cpp  vulkan_texture_data.h  vulkan_types.cpp  vulkan_types.h
engine/wrappers/: glm_wrapper.h
libs/: CMakeLists.txt
libs/animation/: CLAUDE.md  CMakeLists.txt
libs/ar/: CLAUDE.md  CMakeLists.txt
libs/arl/: CMakeLists.txt
libs/asset_converter_v2/: CMakeLists.txt
libs/assets_importer/: CLAUDE.md  CMakeLists.txt
libs/audio/: CMakeLists.txt
libs/cook/: CMakeLists.txt
libs/core/: CLAUDE.md  CMakeLists.txt
libs/editor_ipc/: CMakeLists.txt
libs/engine/: CMakeLists.txt
libs/error_handling/: CMakeLists.txt
libs/game/: CMakeLists.txt
libs/game_session/: CMakeLists.txt
libs/global_state/: CLAUDE.md  CMakeLists.txt
libs/glue/: CMakeLists.txt
libs/gpu_types/: CMakeLists.txt
libs/kryga_port/: CMakeLists.txt
libs/model/: CMakeLists.txt
libs/model_global_api/: CMakeLists.txt
libs/native/: CMakeLists.txt
libs/physics/: CMakeLists.txt
libs/physics_bridge/: CMakeLists.txt
libs/physics_stub/: CMakeLists.txt
libs/picking/: CMakeLists.txt
libs/project_paths/: CMakeLists.txt
libs/render/: CLAUDE.md  CMakeLists.txt
libs/render_bridge/: CLAUDE.md  CMakeLists.txt
libs/render_utils/: CMakeLists.txt
libs/resource_locator/: CMakeLists.txt
libs/rpc/: CMakeLists.txt
libs/serialization/: CMakeLists.txt
libs/spatial/: CMakeLists.txt
libs/testing/: CMakeLists.txt
libs/translators/: CMakeLists.txt
libs/utils/: CLAUDE.md  CMakeLists.txt
libs/vfs/: CLAUDE.md  CMakeLists.txt
libs/vfx/: CMakeLists.txt
libs/voronoi_fracture/: CMakeLists.txt
libs/vulkan_render/: CMakeLists.txt
libs/vulkan_render_types/: CMakeLists.txt
modules/demo/: CMakeLists.txt
modules/root/: CMakeLists.txt
static_packages/root/: CMakeLists.txt
tests/: CMakeLists.txt  base_test.cpp  base_test.h  command_tree_test.cpp  load_level_test.cpp  main.cpp  test_level_load_save.cpp  test_objects_load_save.cpp  test_package_load_save.cpp  textures_cache_test.cpp
tests/e2e/: conftest.py  property_helpers.py  rpc_client.py  test_assets.py  test_audio.py  test_component_chain.py  test_editor.py  test_game_object.py  test_game_object_ops.py  test_invoke.py  test_level.py  test_level_roundtrip.py  test_light_transform.py  test_lights.py  test_material_save.py  test_materials.py  test_mesh_component.py  test_play_mode.py  test_render.py  test_scene_crud.py  test_scene_integrity.py  test_swapchain.py  test_terrain.py  test_texture_swap.py  test_transform.py  test_transform_propagation.py
tests/regression/: assertions.py  conftest.py  rpc_client.py  test_level_roundtrip.py  test_material_save.py  test_scene_crud.py  test_scene_integrity.py  test_texture_swap.py  test_transform.py
(+1513 files in other folders)
