add_subdirectory(kryga_port)
add_subdirectory(ar)
add_subdirectory(asset_converter_v2)
add_subdirectory(assets_importer)
add_subdirectory(global_state)
add_subdirectory(core)
add_subdirectory(error_handling)
add_subdirectory(project_paths)
add_subdirectory(native)
add_subdirectory(vfs)
add_subdirectory(render_bridge)
add_subdirectory(render)
add_subdirectory(animation)
add_subdirectory(serialization)
add_subdirectory(testing)
add_subdirectory(utils)

# Content-cooker. Desktop-only: cross-compiled Android .so can't run on host.
if(NOT ANDROID)
    add_subdirectory(cook)
endif()
